# hc-auth-server

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  env.example
.github/workflows/: docker-build.yaml  test.yml
examples/: client.rs
src/: add_pending.lua  config.rs  github.rs  lib.rs  main.rs  routes_api.rs  routes_client.rs  routes_ops.rs  state.rs  storage.rs  tls.rs
src/storage/: add_pending.lua  delete.lua  get_all_by_state.lua  lua.rs  transition.lua  types.rs
templates/: home.html  protected.html
