[package]
name = "hc-auth-server"
version = "0.0.1"
edition = "2024"

[dependencies]
askama = "0.15.4"
axum = "0.8.8"
dotenvy = "0.15.7"
oauth2 = "4.4.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
redis = { version = "0.32.7", features = ["tokio-comp", "cluster"] }
tower-cookies = { version = "0.11.0", features = ["signed"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
rand = "0.9.2"
base64 = "0.22.1"
ed25519-dalek = "2.2.0"
